# huffman

./: CMakeLists.txt  README.md  decode_tree.c  decode_tree.h  encode_tree.c  encode_tree.h  huffman_tree.c  huffman_tree.h  in.txt  main.c  performance.txt  support_func.c  support_func.h  suppory_func.c  suppory_func.h  test.c  tree_visualization.py
decode/: decode.h  decode_tree.c  decode_tree.h  general_decode_steps.c  support_decode_steps.c
encode/: encode.h  encode_tree.c  encode_tree.h  general_encode_steps.c  info_func.c  support_encode_steps.c
support_func/: support_func.c  support_func.h
